# ChangeLog for x11-libs/qt-demo
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-libs/qt-demo/ChangeLog,v 1.91 2012/05/22 15:21:28 pesa Exp $

*qt-demo-4.8.2 (22 May 2012)

  22 May 2012; Davide Pesavento <pesa@gentoo.org> +qt-demo-4.8.2.ebuild:
  Version bump.

  20 May 2012; Agostino Sarubbo <ago@gentoo.org> qt-demo-4.8.1-r1.ebuild:
  Stable for x86, wrt bug #414241

  15 May 2012; Davide Pesavento <pesa@gentoo.org> qt-demo-4.8.1-r1.ebuild:
  x11-libs/qt-assistant is a hard dependency, because the qtdemo binary links
  against QtHelp (bug 416065).

  14 May 2012; Johannes Huber <johu@gentoo.org> -qt-demo-4.7.2.ebuild:
  Drop Qt-4.7.2

  12 May 2012; Davide Pesavento <pesa@gentoo.org> qt-demo-4.8.1-r1.ebuild:
  Sort deps.

  08 May 2012; Markos Chandras <hwoarang@gentoo.org> qt-demo-4.8.1-r1.ebuild:
  Stable on amd64 wrt bug #414241

  29 Apr 2012; Fabian Groffen <grobian@gentoo.org> qt-demo-4.8.1-r1.ebuild:
  Marked ~x64-macos, pull in qt-assistant dep for OSX targets which need QtHelp

  05 Apr 2012; Johannes Huber <johu@gentoo.org> -qt-demo-4.8.0.ebuild:
  Drop Qt-4.8.0

*qt-demo-4.8.1-r1 (01 Apr 2012)

  01 Apr 2012; Davide Pesavento <pesa@gentoo.org> +qt-demo-4.8.1-r1.ebuild,
  -qt-demo-4.8.1.ebuild, metadata.xml:
  Introduce some USE flags to control building of various examples and demos,
  fixing also bug 410309.

*qt-demo-4.8.1 (29 Mar 2012)

  29 Mar 2012; Davide Pesavento <pesa@gentoo.org> +qt-demo-4.8.1.ebuild:
  Version bump.

  27 Mar 2012; Johannes Huber <johu@gentoo.org> -qt-demo-4.6.2.ebuild:
  Drop Qt-4.6.2

  29 Jan 2012; Joseph Jezak <josejx@gentoo.org> qt-demo-4.7.4.ebuild:
  Marked ppc ppc64 stable for bug #390963.

*qt-demo-4.8.0 (29 Jan 2012)

  29 Jan 2012; Alex Alexander <wired@gentoo.org> +qt-demo-4.8.0.ebuild,
  metadata.xml:
  version bump

  27 Dec 2011; Markus Meier <maekke@gentoo.org> qt-demo-4.7.4.ebuild:
  x86 stable, bug #390963
